[package]
name = "sim_afps"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "42928070e801fd082b9cff3f1c1a45423d344e4b" }

[[bin]]
name = "client_sim_afps"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_sim_afps"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]